Final mobile layout fixes: removed fixed heights and fixed clipping

--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -31,7 +31,7 @@
 }
 @media all and (max-width: 768px) {
   body {
-    padding-top: 80px;
+    padding-top: 100px;
   }
   /* mobile devices */
   .mobile-block {
